# rsna-2022-cervical-spine-fracture-detection

./: .gitignore  MANIFEST.in  Pipfile  README.md  UNet.yaml  effnet.sh  effnetv2.sh  requirements.txt  run.py  segmentations-info-fold0.csv  setup.cfg  setup.py  upload_csfd_module.sh
CSFD/: __init__.py
CSFD/bounding_box/: util.py
CSFD/data/: __init__.py  io.py  io_with_cfg.py  three_dimensions.py
CSFD/metric/: __init__.py  numpy.py  torch.py
CSFD/monai/: __init__.py  datamodule.py  dataset.py  from_checkpoint.py  module.py  training.py  transforms.py  upload_kaggle_datasets.py
CSFD/visualization/: three_dimensions.py  two_dimensions.py
csfd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dash_server/: app.py  config.yaml
data/: create_dicom_metadata_csv.py  print_cv.py  show_dicom_metadata_dists.py  show_metadata.py
effnet/: modified_slice.csv  utils.py
meta/: monitor_submission_executing_time.py
monai/: SEResNext101.yaml  SEResNext50.yaml  ViT.yaml  effnet-bn.yaml  predict.py  resnet10.yaml  resnet10_make.yaml  resnet50.yaml  run.py  save_3d_images.py  train.py  train_with_optuna.py  validate.py
monai_with_semantic_segmentation/: SEResNext50.yaml  train.py  visualize.py
monai_with_ss_2d/: SEResNext50.yaml  predict.py  train.py
monai_with_ss_3d/: SEResNext50.yaml  predict.py  train.py  visualize.py
semantic_segmentation/: UNet.yaml  convert_predicted_float16_to_bool.py  predict.py  train.py
test/: io.py  load_yaml_config.py  monai_transforms.py  predict.py
visualize/: a.ipynb  plot.py
wandb/: latest-run
(+84 files in other folders)
