[options]
install_requires =
    monai>=0.9.1
    monai[einops]>=0.9.1
    torchmetrics
    pydicom
    Pillow
    transformers
    pandas
    omegaconf
    scikit-learn
    torch
    pytorch_lightning
    numpy

    attrdict

    scikit-image
    opencv-python
    python-gdcm
    pylibjpeg
    pylibjpeg-libjpeg

    wandb